<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- dashboard strings -->

    <string name="app_name">Renter</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_20_01_string">20:01</string>
    <string name="dashboard_ek4_string">Renter</string>
    <string name="see_all_string">See All</string>
    <string name="see_all_string2">See All</string>
    <string name="bmw">BMW</string>
    <string name="ferrari">Ferrari</string>
    <string name="mazda">Mazda</string>
    <string name="tesla">Tesla</string>
    <string name="recomended_string">Best Car</string>
    <string name="nearby">Nearby</string>
    <string name="customer_service_string">CustomerService</string>
    <string name="enter_your_username_string">Enter your username</string>
    <string name="enter_your_password_string">Enter your password</string>
    <string name="logo_ek1_string">Logo</string>
    <string name="welcome__string">Welcome!</string>
    <string name="sign_in_ek3_string">Sign in</string>
    <string name="don_t_have_an_account__sign_up_string">Dont have an account? Sign up </string>
    <string name="sign_in_ek4_string">Sign In</string>
    <string name="forgot_password___string">Forgot Password ?</string>
    <string name="remember_me_ek1_string">Remember me</string>

    <string name="order"><b>Order Details</b></string>
    <string name="customer">Fahmi Rizky\n(+62) 890-6767-0909\nJl. Imam Bonjol No.10, RT.1/RW.7, Babakan, Kota Bogor,  Bogor Tengah, Jawa Barat, ID, 16128</string>
    <string name="payment_met"><b>Payment Method</b></string>
    <string name="cash">cash</string>
    <string name="order_id_a2">Order ID                                                                        A26876592D33</string>
    <string name="order_time_">Order Time                                                                           12-02-2023  10:35</string>
    <string name="pay_time_">Payment Time                                                                     12-02-2023  10:37</string>
    <string name="ship_time_">Ship Time                                                                             13-02-2023  09:00</string>
    <string name="completed_time_">Order Time                                                                           13-02-2023  10:30</string>
    <string name="sign_up_ek4">SignUp</string>
    <string name="menu_notif">Notification</string>
    <string name="logout">Logout</string>
    <string name="renter_office">Renter Office</string>
    <!-- List gender -->
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ratingButton">ratingButton</string>
    <string name="csButton">csButton</string>
    <string name="backbutton">backbutton</string>
    <string name="bookAgainButton">bookAgainButton</string>

</resources>