<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="com.example.mowebs.ChatActivity">

	<LinearLayout
		android:id="@+id/navigation_bar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:background="@color/white"
		android:orientation="horizontal"
		android:gravity="center"
		android:elevation="10dp">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navigation_home"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:drawableTop="@drawable/home_navigation_icon"
			android:background="@null"/>
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/navigation_search"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:drawableTop="@drawable/search_navigation_icon"
			android:background="@null"/>
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/nagivation_message"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:drawableTop="@drawable/message_navigation_icon"
			android:background="@null"/>
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/nagivation_profile"
			android:layout_width="wrap_content"
			android:layout_height="24dp"
			android:drawableTop="@drawable/profile_navigation_icon"
			android:background="@null"/>

	</LinearLayout>

	<ScrollView android:id="@+id/dashboard" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent">

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<RelativeLayout android:id="@+id/page_dashboard_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				>

				<View android:id="@+id/_bg__dashboard_ek2"
					android:background="@drawable/_bg__dashboard_ek2_shape"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="410dp"
					android:layout_height="800dp" />

				<ImageView android:id="@+id/bell"
					android:layout_width="50dp"
					android:layout_height="40dp"
					android:layout_marginLeft="285dp"
					android:layout_marginTop="50dp"
					app:srcCompat="@drawable/bell" />

				<ImageView android:id="@+id/profile_dashboard"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_marginLeft="345dp"
					android:layout_marginTop="50dp"
					app:srcCompat="@drawable/profile_dashboard" />



				<RelativeLayout android:id="@+id/dashboard_ek3"
					android:layout_marginTop="67dp"
					android:layout_marginStart="21dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/search_bar"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="50dp"
						android:layout_marginLeft="5dp"
						app:srcCompat="@drawable/search_bar" />

					<ImageView android:id="@+id/bmw_circle1"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginTop="140dp"
						android:layout_marginLeft="15dp"
						app:srcCompat="@drawable/bmw_circle1" />

					<ImageView android:id="@+id/ferrari_circle1"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginTop="140dp"
						android:layout_marginLeft="105dp"
						app:srcCompat="@drawable/ferrari_circle1" />

					<ImageView android:id="@+id/mazda_circle1"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginTop="140dp"
						android:layout_marginLeft="195dp"
						app:srcCompat="@drawable/mazda_circle1" />

					<ImageView android:id="@+id/tesla_circle1"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginTop="140dp"
						android:layout_marginLeft="285dp"
						app:srcCompat="@drawable/tesla_circle1" />

					<ImageView android:id="@+id/setting"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="50dp"
						margin android:layout_marginLeft="320dp"
						app:srcCompat="@drawable/setting" />

					<TextView android:id="@+id/dashboard_ek4"
						android:textStyle="bold"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="15sp"
						android:textColor="@color/_bg__dashboard_ek2_color"
						android:layout_marginLeft="2dp"
						android:layout_marginTop="0dp"
						android:layout_width="116.32dp"
						android:layout_height="33.83dp"
						android:fontFamily="@font/poppins_extra_bold"
						android:text="@string/dashboard_ek4_string"
						 />


					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/btn_seeall"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="246dp"
						android:layout_marginTop="280dp"
						android:text="@string/see_all_string"
						android:background="@null"
						android:textAllCaps="false"/>

					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/bmw"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="-10dp"
						android:layout_marginTop="220dp"
						android:text="@string/bmw"
						android:background="@null"
						android:textAllCaps="false"/>

					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/ferrari"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="80dp"
						android:layout_marginTop="220dp"
						android:text="@string/ferrari"
						android:background="@null"
						android:textAllCaps="false"/>

					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/mazda"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="170dp"
						android:layout_marginTop="220dp"
						android:text="@string/mazda"
						android:background="@null"
						android:textAllCaps="false"/>

					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/tesla"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="260dp"
						android:layout_marginTop="220dp"
						android:text="@string/tesla"
						android:background="@null"
						android:textAllCaps="false"/>


					<TextView android:id="@+id/bestcar"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="15sp"
						android:textColor="@color/_bg__dashboard_ek2_color"
						android:layout_marginLeft="5dp"
						android:layout_marginTop="280dp"
						android:layout_width="127.13dp"
						android:layout_height="34.33dp"
						android:text="@string/recomended_string"
						 />

					<ImageView android:id="@+id/line_5"
						android:src="@drawable/line_5"
						android:contentDescription="line_5"
						 android:layout_marginStart="4dp"
						android:layout_marginTop="26dp"
						android:layout_width="104.5dp"
						android:layout_height="0dp" />

					<ImageView android:id="@+id/line_6"
						android:src="@drawable/line_6"
						android:contentDescription="line_6"
						 android:layout_marginStart="8dp"
						android:layout_marginTop="364dp"
						android:layout_width="114.11dp"
						android:layout_height="0dp" />

					#Best Car here
					<ImageView android:id="@+id/aventador"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="327dp"
						app:srcCompat="@drawable/aventador" />

					<ImageView android:id="@+id/monsory"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="327dp"
						android:layout_marginLeft="190dp"
						app:srcCompat="@drawable/monsory" />

					<TextView android:id="@+id/nearby"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="15sp"
						android:textColor="@color/_bg__dashboard_ek2_color"
						android:layout_marginLeft="5dp"
						android:layout_marginTop="550dp"
						android:layout_width="127.13dp"
						android:layout_height="34.33dp"
						android:text="@string/nearby"
						/>

					<androidx.appcompat.widget.AppCompatButton
						android:id="@+id/btn_seeall2"
						android:layout_width="111.13dp"
						android:layout_height="33.33dp"
						android:textSize="13sp"
						android:textColor="@color/see_all_color"
						android:layout_marginLeft="246dp"
						android:layout_marginTop="550dp"
						android:text="@string/see_all_string2"
						android:background="@null"
						android:textAllCaps="false"/>

					<ImageView android:id="@+id/roma1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="600dp"
						app:srcCompat="@drawable/roma1" />

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="600dp"
						android:layout_marginLeft="190dp"
						app:srcCompat="@drawable/alphard1" />
				</RelativeLayout>




				<RelativeLayout android:id="@+id/mdi_more_circle_outline"
					android:layout_marginTop="285dp"
					android:layout_marginStart="223dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>



				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>