<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment"
    android:layout_marginBottom="55dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/dashboard_ek4"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|center"
            android:gravity="start"
            android:textSize="25sp"
            android:textColor="#424242"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/dashboard_ek4_string"
            />

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_search_gray_24dp"
            android:drawablePadding="15dp"
            android:hint="Find the best for you"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:textSize="14sp"
            android:padding="12dp"
            android:textColor="#898989"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="#C2C2C2" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Brand"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/see_all_color"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"/>

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollViewBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:gravity="center|center_vertical">

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView android:id="@+id/bmw_circle1"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/bmw_circle1" />
                            <TextView
                                android:id="@+id/bmw"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/see_all_color"
                                android:text="@string/bmw"
                                android:background="@null"
                                android:textAllCaps="false"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView android:id="@+id/ferrari_circle1"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/ferrari_circle1" />
                            <TextView
                                android:id="@+id/ferrari"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/see_all_color"
                                android:text="@string/ferrari"
                                android:background="@null"
                                android:textAllCaps="false"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView android:id="@+id/mazda_circle1"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/mazda_circle1" />
                            <TextView
                                android:id="@+id/mazda"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/see_all_color"

                                android:text="@string/mazda"
                                android:background="@null"
                                android:textAllCaps="false"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">
                            <ImageView android:id="@+id/tesla_circle1"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                app:srcCompat="@drawable/tesla_circle1" />
                            <TextView
                                android:id="@+id/tesla"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textColor="@color/see_all_color"

                                android:text="@string/tesla"
                                android:background="@null"
                                android:textAllCaps="false"/>
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="20dp">

                        <TextView android:id="@+id/bestcar"
                            android:layout_gravity="start|center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="#353535"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recomended_string" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_seeall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/see_all_color"
                            android:text="@string/see_all_string"
                            android:background="@null"
                            android:textAllCaps="false"
                            android:layout_gravity="end|center"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewBestCarContent"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="20dp">
                        <TextView android:id="@+id/nearby"
                            android:layout_gravity="center_horizontal|center"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:textColor="#353535"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nearby" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_seeall2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/see_all_color"
                            android:text="@string/see_all_string2"
                            android:background="@null"
                            android:textAllCaps="false"/>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewNearbyContent"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="10dp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</FrameLayout>